--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
   "dependencies": {
     "@angular-extensions/elements": "~9.1.0",
     "@angular-extensions/model": "^8.1.0",
-    "@angular/animations": "~9.1.0",
+    "@angular/animations": "~10.0.4",
     "@angular/cdk": "~9.1.0",
-    "@angular/common": "~9.1.0",
-    "@angular/compiler": "~9.1.0",
-    "@angular/core": "~9.1.0",
-    "@angular/forms": "~9.1.0",
+    "@angular/common": "~10.0.4",
+    "@angular/compiler": "~10.0.4",
+    "@angular/core": "~10.0.4",
+    "@angular/forms": "~10.0.4",
     "@angular/material": "~9.1.0",
-    "@angular/platform-browser": "~9.1.0",
-    "@angular/platform-browser-dynamic": "~9.1.0",
-    "@angular/router": "~9.1.0",
+    "@angular/platform-browser": "~10.0.4",
+    "@angular/platform-browser-dynamic": "~10.0.4",
+    "@angular/router": "~10.0.4",
     "@fortawesome/angular-fontawesome": "^0.6.0",
     "@fortawesome/fontawesome-free": "^5.12.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
@@ -39,15 +39,15 @@
     "browser-detect": "^0.2.28",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
+    "tslib": "^2.0.0",
     "uuid": "^3.4.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.0",
-    "@angular/cli": "~9.1.0",
-    "@angular/compiler-cli": "~9.1.0",
-    "@angular/language-service": "~9.1.0",
+    "@angular-devkit/build-angular": "~0.1000.3",
+    "@angular/cli": "~10.0.3",
+    "@angular/compiler-cli": "~10.0.4",
+    "@angular/language-service": "~10.0.4",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@types/jasmine": "~3.5.3",
@@ -55,26 +55,26 @@
     "@types/node": "^12.11.1",
     "@types/uuid": "^3.4.7",
     "all-contributors-cli": "^6.13.0",
-    "codelyzer": "^5.1.2",
+    "codelyzer": "^6.0.0",
     "express": "^4.16.4",
     "husky": "^4.2.1",
     "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.4.1",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.1",
-    "karma-jasmine": "~3.1.0",
-    "karma-jasmine-html-reporter": "^1.5.2",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~3.3.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "karma-spec-reporter": "^0.0.32",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1",
-    "protractor": "^5.4.3",
+    "protractor": "~7.0.0",
     "rimraf": "^3.0.2",
     "standard-version": "^7.1.0",
     "ts-node": "~8.6.2",
-    "tslint": "~6.0.0",
-    "typescript": "~3.7.5",
+    "tslint": "~6.1.0",
+    "typescript": "~3.9.6",
     "webpack-bundle-analyzer": "^3.6.0"
   }
 }
